feat: batch editor for media entry titles

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -68,6 +68,11 @@ batch_warning_no_authorized_contents_collection,Sie haben für keines der Sets d
 batch_warning_no_authorized_contents_media_entry,Sie haben für keinen der Medieneinträge die nötige Berechtigung.,You have no permissions for these media entries.,
 batch_warning_no_contents_collection,Sie haben keine Sets.,You have no sets.,
 batch_warning_no_contents_media_entry,Sie haben keine Medieneinträge.,You have no media entries.,
+batch_edit_title_title,Titel von Medieneinträgen editieren,Edit titles of media entries,
+batch_edit_title_th_filename,Dateiname,File name,
+batch_edit_title_th_title,Titel,Title,
+batch_edit_title_save,Speichern,Save,
+batch_edit_title_cancel,Abbrechen,Cancel,
 browse_entries_browse_link_title,In diese Richtung weiterstöbern,Browse further in this direction,
 browse_entries_filter_link,Weiter filtern →,Apply additional filter →,
 browse_entries_loading_error,Ladefehler,Loading error,
@@ -601,6 +606,7 @@ resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selecte
 resources_box_batch_actions_clear_clipboard,Stapelverarbeitung leeren,Empty batch processing,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit,Metadaten von Medieneinträgen editieren,Edit metadata for media entries,
+resources_box_batch_actions_edit_title,Titel von Medieneinträgen editieren,Edit titles of media entries,
 resources_box_batch_actions_edit_all_collections,Metadaten von allen Sets editieren,Edit metadata of all sets at once,
 resources_box_batch_actions_edit_all_media_entries,Metadaten von allen Medieneinträgen editieren,Edit metadata of all media entries at once,
 resources_box_batch_actions_edit_sets,Metadaten von Sets editieren,Edit metadata of sets,
