fix: upload error translations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -365,6 +365,7 @@ media_entry_media_import_inside_nojs,Dateien auswählen,Select files,
 media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Importieren in RGB um.","Images (TIFF, JPEG, PNG) and audio/video files in the most common formats are processed and displayed directly. Images in the CMYK color model cannot be displayed correctly, please convert to RGB before uploading.",
 media_entry_media_import_notes_title,Hinweise,Hints,
 media_entry_media_import_select_media,Medien auswählen,Select media files,
+media_entry_media_import_upload_error,überschreitet maximale Grösse von 16000 Pixel,exceeds size limit of 16000 pixel,
 media_entry_media_import_title,"Bilder, Videos, Audio-Dateien oder Dokumente bereitstellen.","Add images, video or audio files, or other documents.",
 media_entry_meta_data_edit_by_context_btn,Metadaten nach Kontexten bearbeiten,Edit metadata by context,
 media_entry_meta_data_edit_by_vocab_btn,Metadaten nach Vokabularen bearbeiten,Edit metadata by vocabulary,
