feat: enhance share dialog

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -709,16 +709,22 @@ session_expiring_soon,Sie werden in weniger als %{minutes} Minuten ausgeloggt. S
 share_back_to_collection,Zurück zum Set,Back to the set,
 share_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
 share_close,Schliessen,Close,
-share_custom_url_hint_collection,"Wenn Sie eine sprechende Adresse nutzen oder unter einem Link wechselnde Sets teilen möchten (z.B. .../roberts_neueste_arbeiten), dann verwenden Sie folgende URL.","If you are using comprehensible addresses or if you want to share alternating sets by means of one internet link (such as …/newest_works_of_robert), use the following URL.",
-share_custom_url_hint_media_entry,"Wenn Sie eine sprechende Adresse nutzen oder unter einem Link wechselnde Medieneinträge teilen möchten (z.B. .../roberts_neueste_arbeiten), dann verwenden Sie folgende URL.","If you are using comprehensible addresses or if you want to share alternating media entries by means of one internet link (such as …/newest_work_of_robert), use the following URL.",
+share_custom_url_hint_collection,"Falls eine «sprechende Adresse» definiert wurde und Sie diese nutzen möchten (z.B. …/annas-neueste-arbeiten), dann verwenden Sie folgende URL:","If a "comprehensible address" has been defined and you would like to use it (e.g., …/latest-works-by-anna), use the following URL:",
+share_custom_url_hint_media_entry,"Falls eine «sprechende Adresse» definiert wurde und Sie diese nutzen möchten (z.B. …/annas-neueste-arbeit), dann verwenden Sie folgende URL:","If a "comprehensible address" has been defined and you would like to use it (e.g., …/latest-work-by-anna), use the following URL:",
 share_custom_url_none_available,Es ist keine sprechende Adresse angelegt.,No comprehensible address has been defined.,
 share_custom_url_subtitle,Sprechende Adresse teilen,Share comprehensible address,
+share_embed_hint_iframe,"Falls dies von Ihrem gewünschen System nicht unterstützt wird, kopieren Sie den nachfolgenden iFrame-Code und fügen diesen als HTML-Element in das gewünschte System ein.","If your desired system does not support this, copy the following iFrame code and paste it into the desired system as an HTML element.",
+share_embed_hint_iframe_code,"IFrame-Code","IFrame Code",
+share_embed_hint_oembed,"Viele Content Management Systeme lassen einfaches Einbetten von Inhalten via oEmbed zu. Dazu kopieren Sie die URL oben und fügen sie in ein Inhaltselement ein.","Many content management systems allow easy embedding of content via oEmbed. To do so, copy the URL above and paste it into a content element.",
+share_embed_hint_subtitle,"Medieneintrag einbetten","Embed Media Entry",
 share_title_collection,Set teilen,Share set,
 share_title_media_entry,Medieneintrag teilen,Share media entry,
-share_uuid_url_hint_collection,"Wenn Sie explizit dieses Set teilen möchten, nutzen Sie folgende URL.",If you explicitly want to share this set use the following address.,
-share_uuid_url_hint_exporter,Auch für den Madek-Exporter kopieren Sie diese URL.,Copy this address for the Madek Exporter as well.,
-share_uuid_url_hint_media_entry,"Wenn Sie explizit diesen Medieneintrag teilen möchten, nutzen Sie folgende URL.","If you explicitly want to share this media entry, use the following address.",
+share_uuid_url_hint_collection,"Möchten Sie dieses Set teilen? Verwenden Sie dazu folgende URL.","Would you like to share this set? Use the following URL.",
+share_uuid_url_hint_exporter,Auch für den Export mit dem Madek-Exporter wird diese URL benötigt.,This URL is also required for exporting with the Madek exporter.,
+share_uuid_url_hint_media_entry,"Möchten Sie diesen Medieneintrag teilen? Verwenden Sie dazu folgende URL.","Would you like to share this media entry? Use the following URL.",
 share_uuid_url_subtitle,URL teilen,Share URL,
+
+
 settings_notifications_title,Notifikationen,Notifications,
 settings_notifications_info1,Notifikationen werden unter %{notifications} aufgeführt und optional per E-Mail verschickt.,Notifications are listed under %{notifications} and optionally sent via email.,
 settings_notifications_info2,Notifikationen werden nach 6 Monaten gelöscht,Notifications will be removed after 6 months,
