--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -345,6 +345,13 @@ media_entry_export_title,Medieneintrag exportieren,Download media entry,
 media_entry_export_rdf_title,RDF-Export Metadaten,RDF export metadata,
 media_entry_export_rdf_title_hint,(experimentell),(experimental),
 media_entry_export_rdf_experiment_footnote,"Struktur und Format der Daten können sich ändern. Bitte geben sie eine Rückmeldung, falls Sie diese verwenden!","Data structure and format is subject to change. Please send feedback if you are using this!",
+media_entry_export_checksum,Prüfsumme,Checksum,
+media_entry_export_checksum_generate,Prüfsumme erzeugen,Generate checksum,
+media_entry_export_checksum_generate_btn,Erzeugen,Generate,
+media_entry_export_checksum_verify_btn,Prüfen,Verify,
+media_entry_export_checksum_reverify_btn,erneut Prüfen,Re-verify,
+media_entry_export_checksum_match_ok,OK,OK,
+media_entry_export_checksum_match_fail,FEHLGESCHLAGEN,FAIL,
 media_entry_file_format_not_supported_1,"Wahrscheinlich unterstützt Ihr Browser nicht die Darstellung dieses Dateiformats, aber Sie ","Your browser probably does not support the file format, but you can ",
 media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
