feat(fe): on-demand checksums for media files

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -341,6 +341,15 @@ media_entry_export_title,Medieneintrag exportieren,Download media entry,
 media_entry_export_rdf_title,RDF-Export Metadaten,RDF export metadata,
 media_entry_export_rdf_title_hint,(experimentell),(experimental),
 media_entry_export_rdf_experiment_footnote,"Struktur und Format der Daten können sich ändern. Bitte geben sie eine Rückmeldung, falls Sie diese verwenden!","Data structure and format is subject to change. Please send feedback if you are using this!",
+media_entry_export_checksum_title,Prüfsumme,Checksum,
+media_entry_export_checksum_generate,Erzeugen,Generate,
+media_entry_export_checksum_verify,Prüfen,Verify,
+media_entry_export_checksum_empty,Prüfsummer erzeugen,Generate checksum,
+media_entry_export_checksum_generating,Wird generiert…,Generating…,
+media_entry_export_checksum_verifying,Wird verifiziert…,Verifying…,
+media_entry_export_checksum_match,Prüfsumme stimmt überein,Checksum matches,
+media_entry_export_checksum_mismatch,Prüfsumme stimmt nicht überein,Checksum does not match,
+media_entry_export_checksum_error,Fehler bei der Prüfsummen-Operation,Error during checksum operation,
 media_entry_file_format_not_supported_1,"Wahrscheinlich unterstützt Ihr Browser nicht die Darstellung dieses Dateiformats, aber Sie ","Your browser probably does not support the file format, but you can ",
 media_entry_file_format_not_supported_2,können die Datei ,download the file,
 media_entry_file_format_not_supported_3,exportieren.,0,
